<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="app_name">surespot</string>
    <string name="friends">friends</string>
    <string name="menu_settings">settings</string>
    <string name="username_label">username:</string>
    <string name="password_label">password:</string>
    <string name="title_activity_main">surespot</string>
    <string name="title_activity_signup">signup</string>
    <string name="title_activity_friends">friends</string>
    <string name="title_activity_notifications">notifications</string>
    <string name="export_sd">Execute Device Storage Backup</string>
    <string name="import_sd">Restore from Device Storage</string>
    <string name="title_activity_chat">chat</string>
    <string name="title_activity_image_view">image view</string>
    <string name="title_activity_image_select">image select</string>
    <string name="title_activity_identity_management">identity management</string>
    <string name="title_activity_settings">settings</string>
    <string name="title_activity_export_identity">backup identity</string>
    <string name="import_identity_label">restore identity...</string>
    <string name="export_identity_label">backup identity...</string>
    <string name="delete_identity_user">delete identity: %s</string>
    <string name="import_identities">restore identity...</string>
    <string name="create_identity_label">create new identity...</string>
    <string name="no_identity_exported">no identity backed up</string>
    <string name="no_identity_imported">no identity restored</string>
    <string name="no_identity_deleted">no identity deleted</string>
    <string name="identity_imported_successfully">identity %s restored successfully</string>
    <string name="could_not_import_identity">could not restore identity</string>
    <string name="could_not_restore_identity_name">could not restore identity %s</string>
    <string name="notifications_title">push notifications</string>
    <string name="notifications_vibration">vibration</string>
    <string name="notifications_sound">sound</string>
    <string name="notifications_led">led</string>
    <string name="notifications_enabled">enabled</string>
    <string name="camera_init">initializing camera</string>
    <string name="uploading_image">uploading image</string>
    <string name="could_not_upload_image">could not upload image</string>
    <string name="image_successfully_uploaded">image successfully uploaded</string>
    <string name="select_image">select image</string>
    <string name="capture_image">capture image</string>
    <string name="assign_image">assign image</string>
    <string name="logout">log out</string>
    <string name="settings">settings</string>
    <string name="welcome_to_surespot"><![CDATA["Welcome to surespot! Data sent using this app is <a href="https://en.wikipedia.org/wiki/End-to-end_encryption">end-to-end</a> encrypted with <a href="https://en.wikipedia.org/wiki/Symmetric-key_algorithm">symmetric-key</a> encryption (<a href="https://en.wikipedia.org/wiki/Advanced_Encryption_Standard">256 bit AES-GCM</a>) using keys created with 521 bit <a href="https://en.wikipedia.org/wiki/Elliptic_curve_Diffie-Hellman">ECDH shared secret derivation</a>."]]></string>
    <string name="no_friends">"No friends...yet. Invite surespot users by entering their username below."</string>
    <string name="help_invite">"Invite surespot users by entering their username on the home tab."</string>
    <string name="navigate_between_chat_tabs">Navigate between tabs by swiping.</string>
    <string name="help_holdmessage">Hold on a message for message options.</string>
    <string name="help_holdfriend">Hold on a friend for friend options.</string>
    <string name="help_imageZoom">Zoom images by touching the image.</string>
    <string name="incorrect_password_or_key">incorrect password or key</string>
    <string name="no_such_user">no such user</string>
    <string name="roll_keys">generate new key pairs</string>
    <string name="key_management">generate new key pairs...</string>
    <string name="regenerate_keys">generate new key pairs</string>
    <string name="could_not_create_new_keys">could not create new key pairs</string>
    <string name="keys_created">new keys successfully created, please backup the identity</string>
    <string name="close_tab">close tab</string>
    <string name="action_settings">Settings</string>
    <string name="no_messages">no messages</string>
    <string name="delete_message">delete message</string>
    <string name="block_underline"><u>block</u></string>
    <string name="ignore_underline"><u>ignore</u></string>
    <string name="accept_underline"><u>accept</u></string>
    <string name="crash_toast_text">houston we have a problem</string>
    <string name="crash_dialog_title">surespot has crashed</string>
    <string name="crash_dialog_text">We must confess that an unexpected error has occurred.\n\nPlease help us to fix the issue by touching OK to send an error report containing no personally identifying information.</string>
    <string name="crash_dialog_comment_prompt">You can add your comments about the problem below if you like:</string>
    <string name="crash_dialog_ok_toast">Thank you!</string>
    <string name="external_invite_message">"I'd like to chat with you privately via surespot. Click %s to install the app and invite me as a friend."</string>
    <string name="help_backupIdentities1">"Because surespot uses encryption keys that are never uploaded to our servers, if you lose your phone, or uninstall then re-install the app, or wipe the app's data, you will not be able to login unless you have backed up your identity."</string>
    <string name="help_backupIdentities2">"Surespot can use Google Drive and/or Device Storage for backing up your identity. These options are in the identity management settings."</string>
    <string name="help_backup_what"><![CDATA["This will export a copy of the selected identity encrypted with <a href="http://www.eetimes.com/design/embedded-internet-design/4372428/How-secure-is-AES-against-brute-force-attacks-">256 bit AES-GCM</a> with a key derived from your password through a <a href="https://en.wikipedia.org/wiki/PBKDF2">PBKDF</a> (Password Based Key Derivation Function)"]]></string>
    <string name="help_backup_local">"For maximum security we recommend using Device Storage backup. Once backed up, the identity file should then be copied (or moved) from your device to a secure location so that it may be restored in the case of app uninstall or 'clear data', a lost or stolen device, or other data loss."</string>
    <string name="help_backup_drive1"><![CDATA["If you elect to backup your identity on Google Drive you will be storing a copy of your <a href="https://en.wikipedia.org/wiki/Public-key_cryptography">private keys</a> on Google Drive servers. Should a third party somehow gain access to the Google Drive servers and attempt to decrypt your identity file by <a href="https://en.wikipedia.org/wiki/Brute-force_attack">brute force attack</a>, be aware that the <a href="https://en.wikipedia.org/wiki/Password_strength">strength</a> of your password will ultimately determine their success."]]></string>
    <string name="help_backup_drive2">"Your identities will be stored on Google Drive in the folder 'surespot identity backups'. Identities can be restored from the create user screen or in identity management settings."</string>
    <string name="pwyl_text">Surespot is ad and data mining free. Servers and storage cost money; your donations ensure that we do not have to charge for surespot. We will donate a percentage to the EFF that they may continue to fight for all of our electronic freedoms.</string>
    <string name="help_messageHistory">Surespot has a 1000 message history. Once you reach 1000 messages your oldest message will be deleted so you will only ever have 1000 (encrypted) messages stored on the server. Of course you can delete any and all of your messages at any time.</string>
    <string name="title_activity_about">about surespot</string>
    <string name="about_about"><![CDATA["surespot - a 2fours production"]]></string>
    <string name="about_website"><![CDATA["Please visit the surespot website at <a href="https://www.surespot.me">https://www.surespot.me</a> for more information, including the <a href="https://www.surespot.me/documents/surespot_terms_of_service.html">terms of service</a>, <a href="https://www.surespot.me/documents/surespot_privacy_policy.html">privacy policy</a>, and <a href="https://www.surespot.me/documents/threat.html">data and threat analysis</a>."]]></string>
    <string name="about_opensource"><![CDATA["Surespot is 100% open source and welcomes your participation - view the source code on github at <a href="https://github.com/surespot">https://github.com/surespot</a>."]]></string>
    <string name="about_tech"><![CDATA["For a more technical overview of how surespot works please touch <a href="https://www.surespot.me/documents/how_surespot_works.html">here</a>."]]></string>
    <string name="about_support"><![CDATA["For questions or support please <a href="https://www.surespot.me/support.html>touch here</a> or email <a href="mailto:support@2fours.com">support@2fours.com</a>.]]></string>
    <string name="notification_title">surespot</string>
    <string name="notification_message">"%1$s: New message from %2$s."</string>
    <string name="notification_invite">"%1$s: Friend invite from %2$s."</string>
    <string name="notification_invite_accept">%1$s: %2$s has accepted your friend invite.</string>
    <string name="about_version">"version: %s"</string>
    <string name="surespot">surespot</string>
    <string name="about_action_bar_right">about</string>
    <string name="identity">identity</string>
    <string name="invite">invite</string>
    <string name="no_contact_data_selected_or_entered">no contact data selected or entered</string>
    <string name="invitation_email_subject">Invitation to chat with me privately via surespot</string>
    <string name="invite_no_application_found">No application found to handle invite.</string>
    <string name="invite_progress_text">creating invitation</string>
    <string name="email">email</string>
    <string name="sms">sms</string>
    <string name="social">social</string>
    <string name="unknown">unknown</string>
    <string name="login">log in</string>
    <string name="login_progress">logging in</string>
    <string name="login_check_password">Could not log in, please make sure your password is correct.</string>
    <string name="login_try_again_later">Error logging in, please try again later.</string>
    <string name="login_max_identities_reached">Sorry, you have already created the maximum number of identities (%d).\n\nIdentities can be deleted in the identity management settings after logging in.</string>
    <string name="via_paypal">VIA PAYPAL</string>
    <string name="open_link_in_browser">Via PayPal</string>
    <string name="send_link_in_email">email link to yourself</string>
    <string name="copy_address_to_clipboard">copy address to clipboard</string>
    <string name="send_address_and_qr_code_in_email">email yourself address and QR code</string>
    <string name="open_bitcoin_wallet">Open wallet</string>
    <string name="backup_location_note">Note: this may or may not be the removable SD card depending on your device.</string>
    <string name="no_drive_identities">No identity backups loaded from Google Drive.</string>
    <string name="no_local_identities">No identity backups found on Device Storage.</string>
    <string name="identity_name">identity name</string>
    <string name="last_backed_up">last backed up</string>
    <string name="last_modified">last modified</string>
    <string name="backup_device">DEVICE STORAGE IDENTITY BACKUP</string>
    <string name="via_bitcoin">Copy address</string>
</resources>