<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        tools:context=".BillingActivity" >

        <TextView
            android:id="@+id/tvPwyl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAlignment="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="15dp"
            android:text="@string/via_paypal"
            android:textSize="12sp"
            android:textStyle="bold" >
        </TextView>

        <Button
            android:textColor="@color/surespotBlue"
            style="@style/Widget.Sherlock.ActionButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:onClick="onPaypalBrowser"
            android:text="@string/open_link_in_browser" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#aaa" />

        <Button
            android:textColor="@color/surespotBlue"
            style="@style/Widget.Sherlock.ActionButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:onClick="onPaypalEmail"
            android:text="@string/send_link_in_email" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/via_bitcoin"
            android:textSize="12sp"
            android:textStyle="bold" >
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:gravity="center"
            android:text="@string/donations__bitcoin"
            android:textSize="14sp" >
        </TextView>

        <Button
            android:textColor="@color/surespotBlue"
            style="@style/Widget.Sherlock.ActionButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:onClick="onBitcoinClipboard"
            android:text="@string/copy_address_to_clipboard" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#aaa" />

        <Button
            android:textColor="@color/surespotBlue"
            style="@style/Widget.Sherlock.ActionButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:onClick="onBitcoinEmail"
            android:text="@string/send_address_and_qr_code_in_email" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#aaa" />

        <Button
            android:textColor="@color/surespotBlue"
            style="@style/Widget.Sherlock.ActionButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:onClick="onBitcoinWallet"
            android:text="@string/open_bitcoin_wallet" />

    </LinearLayout>

</ScrollView>