<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.twofours.surespot.billing.DonationActivity">


    <TextView
        android:id="@+id/tvPwyl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAlignment="center"
        android:text="@string/pwyl_text" />

    <Button
        android:textColor="@color/surespotBlue"
        style="@android:style/Widget.ActionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onPaypalBrowser"
        android:text="@string/open_link_in_browser"
        android:id="@+id/button_paypal"
        android:layout_marginLeft="25dp"
        android:layout_below="@+id/tvPwyl"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/donations__bitcoin"
        android:textSize="14sp"
        android:id="@+id/textView"
        android:gravity="center"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button_paypal"
        android:layout_centerHorizontal="true">
    </TextView>

    <Button
        style="@android:style/Widget.ActionButton"
        android:textColor="@color/surespotBlue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onBitcoinClipboard"
        android:text="@string/via_bitcoin"
        android:id="@+id/button"
        android:layout_gravity="right"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <Button
        style="@android:style/Widget.ActionButton"
        android:textColor="@color/surespotBlue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onBitcoinWallet"
        android:text="@string/open_bitcoin_wallet"
        android:id="@+id/button2"
        android:layout_gravity="right"
        android:layout_below="@+id/textView"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
